fix issue #6 add z-index -1

--- a/src/components/Home/Contact/Contact.module.scss
+++ b/src/components/Home/Contact/Contact.module.scss
@@ -6,6 +6,7 @@
   align-items: stretch;
   position: relative;
   margin: 0 2% 0 0;
+  z-index: -1;
   &::after{
     content: '';
     background-image: url("../../../assets/Background-Contact-Form.jpg");
